Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127292

Failures on tst_qquicktextdocument

XMLWordPrintable

    • f550ebee0 (dev), 8b00e5ce5 (6.8), 7ce3d589b (6.7)

      The dependency update round fails for qtdeclarative on the dev branch (and same error can be seen also in 6.7):

      https://codereview.qt-project.org/c/qt/qtdeclarative/+/576973

      65897: ********* Start testing of tst_qquicktextdocument *********
      FAIL!  : tst_qquicktextdocument::sourceAndSave(markdown) Compared values are not the same
         Actual   (qqdp->detectedFormat): PlainText
         Expected (expectedTextFormat)  : MarkdownText
         Loc: [/Users/qt/work/qt/qtdeclarative/tests/auto/quick/qquicktextdocument/tst_qquicktextdocument.cpp(310)]
      FAIL!  : tst_qquicktextdocument::overrideTextFormat(load md, switch to plain, back to md) Compared values are not the same
         Actual   (fragCountAndItalic.first)    : 1
         Expected (expectedInitialFragmentCount): 3
         Loc: [/Users/qt/work/qt/qtdeclarative/tests/auto/quick/qquicktextdocument/tst_qquicktextdocument.cpp(545)]
      FAIL!  : tst_qquicktextdocument::overrideTextFormat(load md, switch to plain, then auto) Compared values are not the same
         Actual   (fragCountAndItalic.first)    : 1
         Expected (expectedInitialFragmentCount): 3
         Loc: [/Users/qt/work/qt/qtdeclarative/tests/auto/quick/qquicktextdocument/tst_qquicktextdocument.cpp(545)]
      FAIL!  : tst_qquicktextdocument::overrideTextFormat(load md, switch to html, then plain) Compared values are not the same
         Actual   (fragCountAndItalic.first)    : 1
         Expected (expectedInitialFragmentCount): 3
         Loc: [/Users/qt/work/qt/qtdeclarative/tests/auto/quick/qquicktextdocument/tst_qquicktextdocument.cpp(545)]
      FAIL!  : tst_qquicktextdocument::overrideTextFormat(load md as autotext, switch to plain, back to auto) Compared values are not the same
         Actual   (fragCountAndItalic.first)    : 1
         Expected (expectedInitialFragmentCount): 3
         Loc: [/Users/qt/work/qt/qtdeclarative/tests/auto/quick/qquicktextdocument/tst_qquicktextdocument.cpp(545)]
      FAIL!  : tst_qquicktextdocument::overrideTextFormat(load md as autotext, switch to md, then plain) Compared values are not the same
         Actual   (fragCountAndItalic.first)    : 1
         Expected (expectedInitialFragmentCount): 3
         Loc: [/Users/qt/work/qt/qtdeclarative/tests/auto/quick/qquicktextdocument/tst_qquicktextdocument.cpp(545)]
      FAIL!  : tst_qquicktextdocument::overrideTextFormat(load md as autotext, switch to html, then plain) Compared values are not the same
         Actual   (fragCountAndItalic.first)    : 1
         Expected (expectedInitialFragmentCount): 3
         Loc: [/Users/qt/work/qt/qtdeclarative/tests/auto/quick/qquicktextdocument/tst_qquicktextdocument.cpp(545)]
      FAIL!  : tst_qquicktextdocument::independentDocumentsSameSource(textFormat above source) Compared values are not the same
         Actual   (fragCountAndItalic.first): 1
         Expected (3)                       : 3
         Loc: [/Users/qt/work/qt/qtdeclarative/tests/auto/quick/qquicktextdocument/tst_qquicktextdocument.cpp(602)]
      FAIL!  : tst_qquicktextdocument::independentDocumentsSameSource(source above textFormat) Compared values are not the same
         Actual   (fragCountAndItalic.first): 1
         Expected (3)                       : 3
         Loc: [/Users/qt/work/qt/qtdeclarative/tests/auto/quick/qquicktextdocument/tst_qquicktextdocument.cpp(602)]
      Totals: 16 passed, 9 failed, 0 skipped, 0 blacklisted, 639ms 
      
      66720: PASS   : tst_qquicktextdocument::cleanupTestCase()
      QDEBUG : tst_qquicktextdocument::UnknownTestFunc() [     0.089 D] qt.core.qobject.deletelater unknown:0 unknown()  -  Sending deferred delete events as part of finishing thread QThread(0x16f51dca0, name = "QtTest Watchdog")
      Totals: 2 passed, 1 failed, 0 skipped, 0 blacklisted, 64ms

      Build log: https://testresults.qt.io/logs/qt/qtdeclarative/b89bb5b26119db6e5e620e8fdec0739873f8ca75/MacOSMacOS_12arm64MacOSMacOS_12arm64Clangqtci-macos-12-arm-102-a66d35TestOnly/493db017749fcbe30bd98a4e7aa10f6b4de2e0a2/test_1721150614/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtdeclarative/tasks/1721150553

      Tested changes (refs/builds/qtci/dev/1721150550):
      https://codereview.qt-project.org/c/qt/qtdeclarative/+/575451/1 Use updated comparison helper macros
      https://codereview.qt-project.org/c/qt/qtdeclarative/+/576973/2 Update dependencies on 'dev' in qt/qtdeclarative

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            smd Jan Arve
            tarjasundqvist Tarja Sundqvist
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes