Also accept "text/x-web-markdown" as a markdown mime type

Change 74ad4cbeef40b1f51a59b3168f8c0b62eb0b29c8 introduced a new mime
type database (Apache Tika), and it caused the markdown mime type to
change.

The mime type of markdown files was changed from

    "text/markdown"
to
    "text/x-web-markdown"

This caused a regression in QQuickTextDocument
Since there seems to be no *standard* mimetype for markdown (de-facto it
seems to be text/markdown), we'll be more tolerant by matching any of
the two mime types.

Fixes: QTBUG-127292
Pick-to: 6.7
Change-Id: I684378be542dd587324b00b4be2ccfccd630991b
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit f550ebee0466465ddec585a276a2df4d5e00c7cc)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>